# nexus-worker-node

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: WORKER_NODE_BOOTSTRAP.md
nexus_worker/: README.md  __init__.py  __main__.py  agent.py  bootstrap.py  config.yaml.example  config_loader.py  env.py  metrics.py  observability.py
nexus_worker/api/: __init__.py  capabilities.py  health.py  infer.py  infer_stream.py  models.py
nexus_worker/backends/: __init__.py  claude_backend.py  cli_backend.py  gemini_backend.py  ollama_backend.py  openai_backend.py
nexus_worker/hardware/: __init__.py  detector.py  model_advisor.py
nexus_worker/manager/: __init__.py  cli_tools.py  local_models.py
nexus_worker/services/: __init__.py  inference.py
tests/: test_cli.py  test_env.py  test_nexus_worker.py  test_nexus_worker_bootstrap.py
